add assertions for stops and exact leg order